# valiant-vita

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_vpk.sh
livearea/: template.xml
loader/: config.h  ctype_patch.c  dialog.c  dialog.h  elf.h  main.c  main.h  sha1.c  sha1.h  so_util.c  so_util.h
